tests/snapshots/output/account__logout.snap
---
source: tests/cli/snapshots.rs
---
$ vendo logout
exit: 0
--- stdout ---
Done: Logged out of profile "alpha".
