tests/snapshots/output/account__profile_set_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo profile set --account acct-alpha --json
exit: 0
--- stdout ---
{
  "profile": {
    "name": "demo-account",
    "active": true,
    "accountId": "acct-alpha",
    "baseUrl": "[stub]"
  },
  "configPath": "[home]/.config/vendo/config.json"
}
